--- a/lang/de.json
+++ b/lang/de.json
@@ -524,6 +524,7 @@
     "Information from Wikipedia": "Informationen von Wikipedia",
     "in love with": "verliebt in",
     "Inspirational post": "Inspirierender Post",
+    "Invalid JSON was returned from the route.": "Von der Route wurde ein ungültiger JSON-Code zurückgegeben.",
     "Invitation sent": "Einladung gesendet",
     "Invite a new user": "Einen neuen Benutzer einladen",
     "Invite someone": "Jemanden einladen",
@@ -1039,6 +1040,8 @@
     "The reminder has been created": "Die Erinnerung wurde erstellt",
     "The reminder has been deleted": "Die Erinnerung wurde gelöscht",
     "The reminder has been edited": "Die Erinnerung wurde bearbeitet",
+    "The response is not a streamed response.": "Die Antwort ist keine gestreamte Antwort.",
+    "The response is not a view.": "Die Antwort ist keine Ansicht.",
     "The role has been created": "Die Rolle wurde erstellt",
     "The role has been deleted": "Die Rolle wurde gelöscht",
     "The role has been updated": "Die Rolle wurde aktualisiert",
