--- a/lang/es.json
+++ b/lang/es.json
@@ -524,6 +524,7 @@
     "Information from Wikipedia": "Información de Wikipedia",
     "in love with": "enamorado de",
     "Inspirational post": "Publicación inspiradora",
+    "Invalid JSON was returned from the route.": "Se devolvió un JSON no válido desde la ruta.",
     "Invitation sent": "Invitación enviada",
     "Invite a new user": "Invitar a un nuevo usuario",
     "Invite someone": "Invitar a alguien",
@@ -1039,6 +1040,8 @@
     "The reminder has been created": "El recordatorio ha sido creado",
     "The reminder has been deleted": "El recordatorio ha sido eliminado",
     "The reminder has been edited": "El recordatorio ha sido editado",
+    "The response is not a streamed response.": "La respuesta no es una respuesta transmitida.",
+    "The response is not a view.": "La respuesta no es una vista.",
     "The role has been created": "El rol ha sido creado",
     "The role has been deleted": "El rol ha sido eliminado",
     "The role has been updated": "El rol ha sido actualizado",
