--- a/lang/it.json
+++ b/lang/it.json
@@ -524,6 +524,7 @@
     "Information from Wikipedia": "Informazioni da Wikipedia",
     "in love with": "innamorato di",
     "Inspirational post": "Post ispirazionale",
+    "Invalid JSON was returned from the route.": "JSON non valido è stato restituito dalla route.",
     "Invitation sent": "Invito inviato",
     "Invite a new user": "Invita un nuovo utente",
     "Invite someone": "Invita qualcuno",
@@ -1039,6 +1040,8 @@
     "The reminder has been created": "Il promemoria è stato creato",
     "The reminder has been deleted": "Il promemoria è stato eliminato",
     "The reminder has been edited": "Il promemoria è stato modificato",
+    "The response is not a streamed response.": "La risposta non è una risposta in streaming.",
+    "The response is not a view.": "La risposta non è una visione.",
     "The role has been created": "Il ruolo è stato creato.",
     "The role has been deleted": "Il ruolo è stato eliminato.",
     "The role has been updated": "Il ruolo è stato aggiornato.",
