--- a/lang/pt.json
+++ b/lang/pt.json
@@ -524,6 +524,7 @@
     "Information from Wikipedia": "Informação da Wikipédia",
     "in love with": "apaixonado por",
     "Inspirational post": "Postagem inspiradora",
+    "Invalid JSON was returned from the route.": "JSON inválido foi retornado da rota.",
     "Invitation sent": "Convite enviado",
     "Invite a new user": "Convidar um novo usuário",
     "Invite someone": "Convidar alguém",
@@ -1039,6 +1040,8 @@
     "The reminder has been created": "O lembrete foi criado",
     "The reminder has been deleted": "O lembrete foi deletado",
     "The reminder has been edited": "O lembrete foi editado",
+    "The response is not a streamed response.": "A resposta não é uma resposta transmitida.",
+    "The response is not a view.": "A resposta não é uma visão.",
     "The role has been created": "A função foi criada",
     "The role has been deleted": "O papel foi deletado",
     "The role has been updated": "O papel foi atualizado",
