--- a/lang/ru.json
+++ b/lang/ru.json
@@ -403,7 +403,7 @@
     "Edit slice of life": "Редактировать ломтик жизни",
     "Edit the group": "Редактировать группу",
     "Edit the slice of life": "Редактировать ломтик жизни",
-    "Email": "E-Mail адрес",
+    "Email": "Адрес электронной почты",
     "Email address": "Адрес электронной почты",
     "Email address to send the invitation to": "Адрес электронной почты, на который отправить приглашение",
     "Email Password Reset Link": "Ссылка для сброса пароля",
@@ -524,6 +524,7 @@
     "Information from Wikipedia": "Информация из Википедии",
     "in love with": "влюблен в",
     "Inspirational post": "Вдохновляющий пост",
+    "Invalid JSON was returned from the route.": "Маршрут вернул некорректный JSON.",
     "Invitation sent": "Приглашение отправлено",
     "Invite a new user": "Пригласить нового пользователя",
     "Invite someone": "Пригласить кого-то",
@@ -1039,6 +1040,8 @@
     "The reminder has been created": "Напоминание создано",
     "The reminder has been deleted": "Напоминание удалено",
     "The reminder has been edited": "Напоминание изменено",
+    "The response is not a streamed response.": "Ответ не является потоковым.",
+    "The response is not a view.": "Ответ не является представлением.",
     "The role has been created": "Роль создана",
     "The role has been deleted": "Роль удалена",
     "The role has been updated": "Роль обновлена",
